# binary-embedder

./: CMakeLists.txt  README.md  binary-embedder.py
